drop the hero portrait minification functionality to prevent jitter on mobile

--- a/src/ui/pages/TalentsPage/components/MainList/MainList.module.css
+++ b/src/ui/pages/TalentsPage/components/MainList/MainList.module.css
@@ -26,7 +26,7 @@
 .label {
     position: sticky;
     /* height of the toolbar + hero select container */
-    top: 121px;
+    top: 145px;
     z-index: 1;
 
     margin-left: 4px;
